--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,12 +1,12 @@
 .page {
   font-family: Inter, Arial, sans-serif;
   background-color: black;
-  color: white;
 }
 
 .page__content {
   display: flex;
   flex-direction: column;
+  width: 100%;
   min-height: 100vh;
 }
 
@@ -15,4 +15,22 @@
   width: 100%;
   position: relative;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 1100px) {
+  .page__section {
+    margin: 0 20px;
+    max-width: calc (100% - 40px);
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 775px) {
+  .page__section {
+    max-width: 879px;
+    margin: 0 20px;
+    width: 100%;
+    position: relative;
+    margin: 0 auto;
+  }
 }
