--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -15,38 +15,203 @@
 
 .profile__info {
   display: grid;
-  grid-template-areas: "title button" "description" "description";
+  grid-template-areas: "image" "title" "add_button";
   grid-template-columns: minmax(auto, 373px) auto;
 }
 
 .profile__title {
+  font-family: Inter, Arial, sans-serif;
   margin: 0;
   padding: 0;
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
   grid-area: "title";
+  color: white;
 }
 
 .profile__description {
+  font-family: Inter, Arial, sans-serif;
   font-size: 18px;
   line-height: 21.78px;
   font-weight: 400;
   grid-area: "description";
+  color: white;
 }
 
 .profile__edit-button {
-  background: transparent url(../images/Edit\ Button.svg) center no-repeat;
+  background: transparent url(../images/Edit_Button.svg) center no-repeat;
   height: 24px;
   width: 24px;
+  grid-area: "add_button";
   border-color: white;
-  grid-area: "button";
 }
 
 .profile__add-button {
-  background: transparent url(../images/Add\ Button.svg) center no-repeat;
+  background: transparent url(../images/Add_Button.svg) center no-repeat;
   width: 150px;
   height: 50px;
   border-color: white;
   margin-left: auto;
+  overflow: inherit;
+}
+
+@media screen and (max-width: 879px) {
+  .profile {
+    max-width: calc(100% - 40px);
+  }
+
+  .profile__add-button {
+    display: flex;
+    justify-self: end;
+    width: 48px;
+    height: 48px;
+    margin: 0;
+  }
+
+  .profile__info {
+    display: grid;
+    grid-template-areas: "image" "title" "add_button";
+    grid-template-columns: minmax(auto, auto) 245px;
+    grid-gap: 0 10px;
+    text-wrap: nowrap;
+  }
+  .profile__edit-button {
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 775px) {
+  .profile {
+    max-width: calc(100% - 40px);
+  }
+
+  .profile__add-button {
+    display: flex;
+    justify-self: end;
+    width: 48px;
+    height: 48px;
+    margin: 0;
+  }
+
+  .profile__info {
+    display: grid;
+    grid-template-areas: "image" "title" "add_button";
+    grid-template-columns: minmax(auto, auto) 182px;
+    grid-gap: 0 10px;
+    text-wrap: nowrap;
+  }
+  .profile__edit-button {
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .profile {
+    flex-direction: column;
+    padding-top: 42px;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: last baseline;
+    gap: 10px;
+    padding-top: 30px;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding-bottom: 36px;
+    font-size: 18px;
+    line-height: 21.78px;
+    font-weight: 400;
+  }
+
+  .profile__add-button {
+    margin: 0;
+    width: 282px;
+    height: 50px;
+  }
+
+  .profile__edit-button {
+    height: 24px;
+    width: 24px;
+    border-color: white;
+  }
+
+  .profile__title {
+    font-size: 42px;
+    line-height: 48px;
+    font-weight: 500;
+  }
+
+  .profile__image {
+    padding-left: 101px;
+    padding-right: 99px;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 423px) {
+  .profile__title {
+    font-size: 30px;
+  }
+
+  .profile__description {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile {
+    flex-direction: column;
+    padding-top: 42px;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: last baseline;
+    gap: 10px;
+    padding-top: 30px;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding-bottom: 36px;
+    font-size: 14px;
+  }
+
+  .profile__add-button {
+    margin: 0;
+    width: 282px;
+    height: 50px;
+  }
+
+  .profile__edit-button {
+    height: 18px;
+    width: 18px;
+    border-color: white;
+  }
+
+  .profile__title {
+    font-size: 22px;
+    line-height: normal;
+    font-weight: 500;
+  }
+
+  .profile__image {
+    padding-left: 101px;
+    padding-right: 99px;
+    margin: 0;
+  }
 }
