--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -14,51 +14,9 @@
   margin: 0;
 }
 
-.card {
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-}
-
-.card__image {
-  width: 282px;
-  height: 282px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.card__description {
-  display: flex;
-  background-color: white;
-  color: black;
-  padding: 25px 20px 25px 20px;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-.card__title {
-  font-family: Inter, Arial, sans-serif;
-  max-width: 220px;
-  font-size: 24px;
-  font-weight: 900;
-  line-height: 29px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  margin: 0;
-}
-
-.card__like-button {
-  background: transparent url(../images/Vector.svg) center no-repeat;
-  width: 21px;
-  height: 18px;
-  border: none;
-}
-
 @media screen and (max-width: 320px) {
   .cards {
     padding-bottom: 0;
+    padding-top: 36px;
   }
 }
