--- a/blocks/copyright.css
+++ b/blocks/copyright.css
@@ -8,23 +8,21 @@
   line-height: 21.78px;
 }
 
+@media screen and (max-width: 879px) {
+  .copyright {
+    max-width: 582px;
+  }
+}
+
 @media screen and (max-width: 775px) {
   .copyright {
-    margin: 0 20px;
-    padding-left: 75px;
     font-size: 16px;
   }
 }
 
 @media screen and (max-width: 580px) {
   .copyright {
-    padding-left: 125px;
-  }
-}
-
-@media screen and (max-width: 423px) {
-  .copyright {
-    padding-left: 48px;
+    max-width: 280px;
   }
 }
 
@@ -32,10 +30,11 @@
   .copyright {
     padding: 48px 19px 36px;
     margin-left: auto;
-    max-width: 100%;
-    height: 14px;
+  }
+
+  .copyright__description {
+    padding-bottom: 0;
     font-size: 14px;
-    font-weight: 400;
     line-height: 16.94px;
   }
 }
