--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -11,11 +11,14 @@
   object-fit: cover;
   background-position: center;
   margin-right: 24px;
+  grid-area: "image";
 }
 
 .profile__info {
   display: grid;
-  grid-template-areas: "image" "title" "add_button";
+  grid-template-areas:
+    "image" "title" "edit_button" "add_button"
+    "description";
   grid-template-columns: minmax(auto, 373px) auto;
 }
 
@@ -28,6 +31,10 @@
   font-weight: 500;
   grid-area: "title";
   color: white;
+  grid-gap: 18px 7px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__description {
@@ -37,23 +44,41 @@
   font-weight: 400;
   grid-area: "description";
   color: white;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button {
-  background: transparent url(../images/Edit_Button.svg) center no-repeat;
+  background: transparent url(../images/edit_button.svg) center no-repeat;
   height: 24px;
   width: 24px;
-  grid-area: "add_button";
+  grid-area: "edit_button";
+  align-self: center;
   border-color: white;
+  border-width: 1px;
+}
+
+.profile__edit-button:hover {
+  opacity: 60%;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
 }
 
 .profile__add-button {
   background: transparent url(../images/Add_Button.svg) center no-repeat;
-  width: 150px;
-  height: 50px;
+  min-width: 150px;
+  min-height: 50px;
   border-color: white;
   margin-left: auto;
   overflow: inherit;
+  border-radius: 2px;
+}
+
+.profile__add-button:hover {
+  opacity: 60%;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 879px) {
@@ -64,8 +89,6 @@
   .profile__add-button {
     display: flex;
     justify-self: end;
-    width: 48px;
-    height: 48px;
     margin: 0;
   }
 
@@ -88,18 +111,8 @@
 
   .profile__add-button {
     display: flex;
-    justify-self: end;
-    width: 48px;
-    height: 48px;
+    justify-self: center;
     margin: 0;
-  }
-
-  .profile__info {
-    display: grid;
-    grid-template-areas: "image" "title" "add_button";
-    grid-template-columns: minmax(auto, auto) 182px;
-    grid-gap: 0 10px;
-    text-wrap: nowrap;
   }
   .profile__edit-button {
     align-self: center;
@@ -184,7 +197,7 @@
   }
 
   .profile__description {
-    width: 100%;
+    max-width: 100%;
     text-align: center;
     margin: 0;
     padding-bottom: 36px;
@@ -200,13 +213,13 @@
   .profile__edit-button {
     height: 18px;
     width: 18px;
-    border-color: white;
   }
 
   .profile__title {
     font-size: 22px;
     line-height: normal;
     font-weight: 500;
+    max-width: 100%;
   }
 
   .profile__image {
