--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,4 @@
 @import url(../blocks/profile.css);
 @import url(../blocks/cards.css);
 @import url(../blocks/copyright.css);
+@import url(../blocks/card.css);
