--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -11,50 +11,51 @@
   object-fit: cover;
   background-position: center;
   margin-right: 24px;
-  grid-area: "image";
 }
 
 .profile__info {
   display: grid;
   grid-template-areas:
-    "image" "title" "edit_button" "add_button"
-    "description";
-  grid-template-columns: minmax(auto, 373px) auto;
+    "title edit_button"
+    "description .";
+  grid-template-columns: repeat(2, auto);
+  align-items: center;
+  row-gap: 7px;
+  column-gap: 18px;
 }
 
 .profile__title {
   font-family: Inter, Arial, sans-serif;
+  grid-area: title;
   margin: 0;
   padding: 0;
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
-  grid-area: "title";
   color: white;
-  grid-gap: 18px 7px;
-  text-overflow: ellipsis;
+  text-overflow: clip;
   white-space: nowrap;
   overflow: hidden;
 }
 
 .profile__description {
   font-family: Inter, Arial, sans-serif;
+  grid-area: description;
   font-size: 18px;
   line-height: 21.78px;
   font-weight: 400;
   margin: 0;
-  grid-area: "description";
   color: white;
-  text-overflow: ellipsis;
+  text-overflow: clip;
   white-space: nowrap;
   overflow: hidden;
 }
 
 .profile__edit-button {
   background: transparent url(../images/edit_button.svg) center no-repeat;
+  grid-area: edit_button;
   height: 24px;
   width: 24px;
-  grid-area: "edit_button";
   align-self: center;
   border-color: white;
   border-width: 1px;
@@ -68,6 +69,7 @@
 
 .profile__add-button {
   background: transparent url(../images/Add_Button.svg) center no-repeat;
+  grid-area: add_button;
   min-width: 150px;
   min-height: 50px;
   border-color: white;
@@ -89,7 +91,6 @@
 
   .profile__info {
     display: grid;
-    grid-template-areas: "image" "title" "add_button";
     grid-template-columns: minmax(auto, auto) 245px;
     grid-gap: 0 10px;
     text-wrap: nowrap;
@@ -125,7 +126,6 @@
     flex-wrap: wrap;
     width: 100%;
     justify-content: center;
-    align-items: last baseline;
     gap: 10px;
     padding-top: 30px;
   }
