--- a/blocks/header.css
+++ b/blocks/header.css
@@ -35,6 +35,7 @@
 @media screen and (max-width: 320px) {
   .header {
     max-width: 100%;
+    margin-top: 28px;
   }
   .header__logo {
     padding-left: 27px;
