--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -46,13 +46,13 @@
   font-weight: 400;
   margin: 0;
   color: white;
-  text-overflow: clip;
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 
 .profile__edit-button {
-  background: transparent url(../images/edit_button.svg) center no-repeat;
+  background: transparent url(../images/Edit_Button.svg) center no-repeat;
   grid-area: edit_button;
   height: 24px;
   width: 24px;
@@ -73,9 +73,8 @@
   border-color: white;
   margin-left: auto;
   overflow: inherit;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   transition: 0.5s ease-in-out;
-  border-radius: 2px;
 }
 
 .profile__add-button:hover {
@@ -83,72 +82,47 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 879px) {
-  .profile {
-    max-width: calc(100% - 40px);
-  }
-
-  .profile__info {
-    grid-template-columns: minmax(auto, auto) 245px;
-    grid-gap: 0 10px;
-    text-wrap: nowrap;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .profile__info {
-    grid-template-rows: repeat(2, auto);
-  }
-
-  .profile__add-button {
-    display: flex;
-    justify-self: center;
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 580px) {
-  .profile {
-    flex-direction: column;
-    padding-top: 42px;
-  }
-
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-    gap: 10px;
-    padding-top: 30px;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-    padding-bottom: 36px;
-  }
-
-  .profile__add-button {
-    margin: 0;
-    width: 282px;
-    height: 50px;
-    background-size: 16px;
-  }
-
-  .profile__image {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 423px) {
-  .profile__title {
-    font-size: 30px;
-  }
-
-  .profile__description {
-    font-size: 16px;
-  }
-}
+@media screen and (max-width: 800px) {
+    .profile {
+        flex-direction: column;
+        padding-top: 42px;
+      }
+    
+      .profile__info {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: center;
+        gap: 10px;
+        padding-top: 30px;
+      }
+    
+      .profile__description {
+        width: 100%;
+        text-align: center;
+        padding-bottom: 36px;
+      }
+    
+      .profile__add-button {
+        margin: 0;
+        width: 282px;
+        height: 50px;
+        background-size: 16px;
+      }
+    
+      .profile__image {
+        margin: 0;
+      }
+    }
+    
+    @media screen and (max-width: 423px) {
+      .profile__title {
+        font-size: 30px;
+      }
+    
+      .profile__description {
+        font-size: 16px;
+      }
 
 @media screen and (max-width: 320px) {
   .profile__description {
