--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -75,6 +75,7 @@
   overflow: inherit;
   border: 2px solid #fff;
   transition: 0.5s ease-in-out;
+  border-radius: 2px;
 }
 
 .profile__add-button:hover {
