--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,4 @@
 @import url(../blocks/cards.css);
 @import url(../blocks/copyright.css);
 @import url(../blocks/card.css);
+@import url(../blocks/modal.css);
