--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -57,7 +57,7 @@
   gap: 29.74px;
 }
 
-.form__input {
+.modal__input {
   display: block;
   padding-bottom: 13.26px;
   display: flex;
@@ -72,7 +72,7 @@
   color: rgba(0, 0, 0, 0.2);
 }
 
-.form__input::placeholder {
+.modal__input::placeholder {
   font-family: "Inter", Arial, sans-serif;
   color: #000;
   font-style: normal;
