--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -84,6 +84,7 @@
 .modal__button {
   background-color: rgb(0, 0, 0);
   color: #fff;
+  cursor: pointer;
   border-radius: 2px;
   width: 100%;
   height: 50.15px;
