--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -88,6 +88,7 @@
   border-radius: 2px;
   width: 100%;
   height: 50.15px;
+  padding: 0;
 }
 
 .modal__button:hover {
@@ -104,5 +105,21 @@
 
   .modal__heading {
     font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .modal__button {
+    width: 238px;
+    height: 46px;
+  }
+
+  .modal__container {
+    max-width: 282px;
+    padding: 25px 22px 25px 22px;
+  }
+
+  .modal__heading {
+    padding-bottom: 75px;
   }
 }
