add new modal and like button functionality

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -39,6 +39,11 @@
   border: none;
 }
 
+.card__like-button_active {
+  background-image: url(../images/Union.svg);
+  transition: none;
+}
+
 .card__like-button:hover {
   opacity: 50%;
   cursor: pointer;
