--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,6 @@
 .card {
   display: flex;
+  position: relative;
   flex-direction: column;
   border-radius: 10px;
   overflow: hidden;
@@ -44,7 +45,20 @@
   transition: none;
 }
 
-.card__like-button:hover {
+.card__delete {
+  background-image: url(../images/Trash.svg);
+  position: absolute;
+  top: 18px;
+  left: 249px;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.card__delete:hover {
+  opacity: 60%;
+  cursor: pointer;
+}
+.card .card__like-button:hover {
   opacity: 50%;
   cursor: pointer;
 }
