--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -16,12 +16,24 @@
   display: flex;
 }
 
-.modal__container {
+.modal__preview-container {
   position: relative;
-  background-color: #fff;
-  padding: 36px;
-  border-radius: 10px;
-  width: 430px;
+  background-color: none;
+}
+
+.modal__preview-image {
+  max-width: 75vw;
+  max-height: 75vh;
+  transition: opacity 0.5s linear;
+}
+
+.modal__image-caption {
+  font-family: inter, Arial, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #fff;
+  line-height: 14.52px;
+  margin-top: 10px;
 }
 
 .modal__close {
@@ -105,6 +117,23 @@
 
   .modal__heading {
     font-size: 18px;
+  }
+
+  .modal__image-caption {
+    max-width: 240px;
+    max-height: 299px;
+  }
+
+  #modal-close-button {
+    width: 30px;
+    height: 30px;
+    left: calc(100% - 20px);
+    bottom: calc(100% - 20px);
+  }
+
+  .modal__preview-image {
+    width: 240px;
+    height: 299px;
   }
 }
 
