--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -18,7 +18,10 @@
 
 .modal__container {
   position: relative;
-  background-color: none;
+  background-color: #fff;
+  padding: 36px;
+  border-radius: 10px;
+  width: 430px;
 }
 
 .modal__preview-image {
