remove curly braces from popupSelector

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,9 +1,9 @@
-@import url(/src/vendor/normalize.css);
-@import url(/src/vendor/fonts.css);
-@import url(/src/blocks/page.css);
-@import url(/src/blocks/header.css);
-@import url(/src/blocks/profile.css);
-@import url(/src/blocks/cards.css);
-@import url(/src/blocks/copyright.css);
-@import url(/src/blocks/card.css);
-@import url(/src/blocks/modal.css);
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/profile.css);
+@import url(../blocks/cards.css);
+@import url(../blocks/copyright.css);
+@import url(../blocks/card.css);
+@import url(../blocks/modal.css);
